@@ -43,6 +43,6 @@ class Environment < ActiveRecord::Base
   end
 
   def ref_path
-    "refs/environments/#{name}/"
+    "refs/environments/#{Shellwords.shellescape(name)}/"
   end
 end
