@@ -15,28 +15,4 @@ describe Deployment, models: true do
 
   it { is_expected.to validate_presence_of(:ref) }
   it { is_expected.to validate_presence_of(:sha) }
-
-  describe '#includes_commit?' do
-    let(:project)     { create(:project) }
-    let(:environment) { create(:environment, project: project) }
-    let(:deployment) do
-      create(:deployment, environment: environment, sha: project.commit.id)
-    end
-
-    context 'when there is no project commit' do
-      it 'returns false' do
-        commit = project.commit('feature')
-
-        expect(deployment.includes_commit?(commit)).to be false
-      end
-    end
-
-    context 'when they share the same tree branch' do
-      it 'returns true' do
-        commit = project.commit
-
-        expect(deployment.includes_commit?(commit)).to be true
-      end
-    end
-  end
 end
