@@ -31,36 +31,20 @@ describe Environment, models: true do
     end
   end
 
-  describe '#includes_commit?' do
-    context 'without a last deployment' do
-      it "returns false" do
-        expect(environment.includes_commit?('HEAD')).to be false
-      end
+  describe '#deployment_for' do
+    let(:project)       { create(:project) }
+    let!(:environment)  { create(:environment, project: project) }
+    let(:deployment)    { create(:deployment, environment: environment) }
+    let(:deployment1)   { create(:deployment, environment: environment, sha: commit.id) }
+    let(:commit)        { project.commit }
+
+    before do
+      deployment.create_refs
+      deployment1.create_refs
     end
 
-    context 'with a last deployment' do
-      let(:project)     { create(:project) }
-      let(:environment) { create(:environment, project: project) }
-
-      let!(:deployment) do
-        create(:deployment, environment: environment, sha: project.commit('master').id)
-      end
-
-      context 'in the same branch' do
-        it 'returns true' do
-          expect(environment.includes_commit?(RepoHelpers.sample_commit)).to be true
-        end
-      end
-
-      context 'not in the same branch' do
-        before do
-          deployment.update(sha: project.commit('feature').id)
-        end
-
-        it 'returns false' do
-          expect(environment.includes_commit?(RepoHelpers.sample_commit)).to be false
-        end
-      end
+    it 'selects deployed environments' do
+      expect(environment.deployment_for(commit)).to eq deployment.id.to_s
     end
   end
 
