@@ -25,6 +25,7 @@ v 8.12.0 (unreleased)
   - Move pushes_since_gc from the database to Redis
   - Add font color contrast to external label in admin area (ClemMakesApps)
   - Change logo animation to CSS (ClemMakesApps)
+  - Show how much time ago a merge request was deployed !6273
   - Instructions for enabling Git packfile bitmaps !6104
   - Use Search::GlobalService.new in the `GET /projects/search/:query` endpoint
   - Fix long comments in diffs messing with table width
